--- a/ArchiveMaster.Module.FileBackupper/Views/BackupTasksPanel.axaml
+++ b/ArchiveMaster.Module.FileBackupper/Views/BackupTasksPanel.axaml
@@ -41,7 +41,7 @@
                         Command="{Binding DeleteSelectedTaskCommand}"
                         Content="{StaticResource Delete}"
                         FontFamily="{StaticResource IconFont}"
-                        IsEnabled="{Binding SelectedTask, Converter={StaticResource NotNullConverter}}"
+                        IsEnabled="{Binding SelectedTask, Converter={x:Static cvt:Converters.IsNotNull}}"
                         ToolTip.Tip="删除" />
                 </StackPanel>
 
@@ -50,7 +50,7 @@
             <ScrollViewer
                 Grid.Column="2"
                 HorizontalScrollBarVisibility="Disabled">
-                <ctrl:StackFormItemGroup IsEnabled="{Binding SelectedTask, Converter={StaticResource NotNullConverter}}">
+                <ctrl:StackFormItemGroup IsEnabled="{Binding SelectedTask, Converter={x:Static cvt:Converters.IsNotNull}}">
                     <ctrl:StackFormItemGroup.Styles>
                         <Style Selector="TextBlock.Title">
                             <Setter Property="Margin" Value="0,16,0,0" />
