--- a/ArchiveMaster.Core/Views/FilePickerTextBox.axaml
+++ b/ArchiveMaster.Core/Views/FilePickerTextBox.axaml
@@ -2,6 +2,7 @@
     x:Class="ArchiveMaster.Views.FilePickerTextBox"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:cvt="clr-namespace:ArchiveMaster.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:views="clr-namespace:ArchiveMaster.Views"
@@ -14,7 +15,7 @@
         <TextBlock
             Margin="0,0,8,0"
             VerticalAlignment="Center"
-            IsVisible="{Binding ElementName=root, Path=Label, Converter={StaticResource NotNullConverter}}"
+            IsVisible="{Binding ElementName=root, Path=Label, Converter={x:Static cvt:Converters.IsNotNull}}"
             Text="{Binding ElementName=root, Path=Label}" />
         <TextBox
             Grid.Column="2"
@@ -22,7 +23,7 @@
             AcceptsReturn="{Binding ElementName=root, Path=AllowMultiple}"
             MaxLines="3"
             Text="{Binding ElementName=root, Path=FileNames}"
-            TextWrapping="{Binding ElementName=root, Path=AllowMultiple, Converter={StaticResource BoolTextWrapConverter}}" />
+            TextWrapping="{Binding ElementName=root, Path=AllowMultiple, Converter={x:Static cvt:Converters.TextWrapping}}" />
         <Button
             Grid.Column="4"
             Margin="8,0,0,0"
