--- a/ArchiveMaster.Module.FileTools/Views/BatchCommandLinePanel.axaml
+++ b/ArchiveMaster.Module.FileTools/Views/BatchCommandLinePanel.axaml
@@ -3,6 +3,7 @@
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ct="using:FzLib.Avalonia.Controls"
+    xmlns:cvt="using:ArchiveMaster.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:e="using:ArchiveMaster.Enums"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -61,7 +62,7 @@
                 <Grid ColumnDefinitions="*,Auto">
                     <ComboBox
                         HorizontalAlignment="Stretch"
-                        DisplayMemberBinding="{Binding ., Converter={StaticResource DescriptionConverter}}"
+                        DisplayMemberBinding="{Binding ., Converter={x:Static cvt:Converters.Description}}"
                         ItemsSource="{me:EnumValues e:BatchTarget}"
                         SelectedItem="{Binding Config.Target}" />
                     <ct:FormItem
