--- a/ArchiveMaster.Module.FileTools/Views/DirStructureSyncPanel.axaml
+++ b/ArchiveMaster.Module.FileTools/Views/DirStructureSyncPanel.axaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:c="using:ArchiveMaster.Converters"
     xmlns:ctrl="clr-namespace:FzLib.Avalonia.Controls;assembly=FzLib.Avalonia"
+    xmlns:cvt="using:ArchiveMaster.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:fileSystem="clr-namespace:ArchiveMaster.ViewModels.FileSystem"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -54,7 +55,7 @@
                     <SelectableTextBlock
                         Grid.Row="6"
                         Grid.Column="2"
-                        Text="{Binding Template.Length, Converter={StaticResource FileLengthConverter}}" />
+                        Text="{Binding Template.Length, Converter={x:Static cvt:Converters.FileLength}}" />
 
                     <TextBlock
                         Grid.Row="8"
@@ -96,7 +97,7 @@
                     <SelectableTextBlock
                         Grid.Row="6"
                         Grid.Column="2"
-                        Text="{Binding Length, Mode=OneWay, Converter={StaticResource FileLengthConverter}}" />
+                        Text="{Binding Length, Mode=OneWay, Converter={x:Static c:Converters.FileLength}}" />
 
                     <TextBlock
                         Grid.Row="8"
