--- a/ArchiveMaster.Module.FileTools/Views/TwinFileCleanerPanel.axaml
+++ b/ArchiveMaster.Module.FileTools/Views/TwinFileCleanerPanel.axaml
@@ -3,6 +3,7 @@
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ct="using:FzLib.Avalonia.Controls"
+    xmlns:cvt="using:ArchiveMaster.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:v="using:ArchiveMaster.Views"
@@ -20,10 +21,10 @@
             </ct:FormItem>
 
             <ct:FormItem Label="主文件后缀：">
-                <TextBox Text="{Binding Config.MasterExtensions, Converter={StaticResource StringListConverter}}" />
+                <TextBox Text="{Binding Config.MasterExtensions, Converter={}}" />
             </ct:FormItem>
             <ct:FormItem Label="附属文件模式：">
-                <TextBox Text="{Binding Config.DeletingPatterns, Converter={StaticResource StringListConverter}}" />
+                <TextBox Text="{Binding Config.DeletingPatterns, Converter={x:Static cvt:Converters.StringList}}" />
             </ct:FormItem>
 
         </ct:StackFormItemGroup>
