--- a/ArchiveMaster.Module.PhotoTools/Views/PhotoSlimmingPanel.axaml
+++ b/ArchiveMaster.Module.PhotoTools/Views/PhotoSlimmingPanel.axaml
@@ -143,7 +143,7 @@
                     <ListBox ItemsSource="{Binding CopyFiles.ProcessingFilesRelativePaths}" />
                     <TextBlock
                         Grid.Row="2"
-                        IsVisible="{Binding CopyFiles, Converter={StaticResource NotNullConverter}}">
+                        IsVisible="{Binding CopyFiles, Converter={x:Static cvt:Converters.IsNotNull}}">
                         <Run Text="共" />
                         <Run Text="{Binding CopyFiles.ProcessingFiles.Count}" />
                         <Run Text="个文件，跳过" />
@@ -159,7 +159,7 @@
                     <ListBox ItemsSource="{Binding CompressFiles.ProcessingFilesRelativePaths}" />
                     <TextBlock
                         Grid.Row="2"
-                        IsVisible="{Binding CompressFiles, Converter={StaticResource NotNullConverter}}">
+                        IsVisible="{Binding CompressFiles, Converter={x:Static cvt:Converters.IsNotNull}}">
                         <Run Text="共" />
                         <Run Text="{Binding CompressFiles.ProcessingFiles.Count}" />
                         <Run Text="个文件，跳过" />
@@ -175,7 +175,7 @@
                     <ListBox ItemsSource="{Binding DeleteFiles.ProcessingFilesRelativePaths}" />
                     <TextBlock
                         Grid.Row="2"
-                        IsVisible="{Binding DeleteFiles, Converter={StaticResource NotNullConverter}}">
+                        IsVisible="{Binding DeleteFiles, Converter={x:Static cvt:Converters.IsNotNull}}">
                         <Run Text="共" />
                         <Run Text="{Binding DeleteFiles.ProcessingFiles.Count}" />
                         <Run Text="个文件，跳过" />
@@ -191,7 +191,7 @@
                     <ListBox ItemsSource="{Binding ErrorMessages}" />
                     <TextBlock
                         Grid.Row="2"
-                        IsVisible="{Binding ErrorMessages, Converter={StaticResource NotNullConverter}}">
+                        IsVisible="{Binding ErrorMessages, Converter={x:Static cvt:Converters.IsNotNull}}">
                         <Run Text="共" />
                         <Run Text="{Binding ErrorMessages.Count}" />
                         <Run Text="条信息" />
