--- a/ArchiveMaster.Module.FileBackupper/Views/BackupLogsPanel.axaml
+++ b/ArchiveMaster.Module.FileBackupper/Views/BackupLogsPanel.axaml
@@ -4,12 +4,11 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:c="using:ArchiveMaster.Converters"
     xmlns:cf="using:FzLib.Avalonia.Converters"
+    xmlns:cvt="using:ArchiveMaster.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:l="using:Microsoft.Extensions.Logging"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:me="using:FzLib.Avalonia.MarkupExtensions"
-    xmlns:semi="https://irihi.tech/semi"
-    xmlns:u="https://irihi.tech/ursa"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
@@ -72,7 +71,7 @@
                     Binding="{Binding Type, Converter={StaticResource LogLevelConverter}, Mode=OneWay}"
                     Header="类型" />
                 <DataGridTextColumn
-                    Binding="{Binding Time, Converter={StaticResource DateTimeConverter}, Mode=OneWay}"
+                    Binding="{Binding Time, Converter={x:Static cvt:Converters.DateTime}, Mode=OneWay}"
                     Header="时间" />
                 <DataGridTextColumn
                     Binding="{Binding Message}"
