--- a/ArchiveMaster.Module.PhotoTools/Views/PhotoSlimmingPanel.axaml
+++ b/ArchiveMaster.Module.PhotoTools/Views/PhotoSlimmingPanel.axaml
@@ -3,6 +3,7 @@
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ct="using:FzLib.Avalonia.Controls"
+    xmlns:cvt="using:ArchiveMaster.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:gb="using:GroupBox.Avalonia.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -63,14 +64,14 @@
                             Filter="{Binding Config.Filter}" />
                     </ct:FormItem>
                     <ct:FormItem Label="复制后缀名：">
-                        <TextBox Text="{Binding Config.CopyDirectlyExtensions, Converter={StaticResource StringListConverter}}" />
+                        <TextBox Text="{Binding Config.CopyDirectlyExtensions, Converter={x:Static cvt:Converters.StringList}}" />
                     </ct:FormItem>
                     <TextBlock
                         Opacity="0.7"
                         Text="直接复制的文件的后缀名。使用逗号分隔。"
                         TextWrapping="Wrap" />
                     <ct:FormItem Label="压缩后缀名：">
-                        <TextBox Text="{Binding Config.CompressExtensions, Converter={StaticResource StringListConverter}}" />
+                        <TextBox Text="{Binding Config.CompressExtensions, Converter={x:Static cvt:Converters.StringList}}" />
                     </ct:FormItem>
                     <TextBlock
                         Opacity="0.7"
