--- a/ArchiveMaster.Module.PhotoTools/Views/RepairModifiedTimePanel.axaml
+++ b/ArchiveMaster.Module.PhotoTools/Views/RepairModifiedTimePanel.axaml
@@ -3,6 +3,7 @@
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ct="using:FzLib.Avalonia.Controls"
+    xmlns:cvt="clr-namespace:ArchiveMaster.Converters;assembly=ArchiveMaster.Core"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:gb="using:GroupBox.Avalonia.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -36,7 +37,7 @@
                             Width="120"
                             Maximum="86400"
                             Minimum="1"
-                            Value="{Binding Config.MaxDurationTolerance, Converter={StaticResource TimeSpanNumberConverter}, ConverterParameter=s}" />
+                            Value="{Binding Config.MaxDurationTolerance, Converter={x:Static cvt:Converters.TimeSpanNumber}, ConverterParameter=s}" />
                     </ct:FormItem>
                 </ct:WrapFormItemGroup>
             </ct:FormItem>
