--- a/ArchiveMaster.Module.FileBackupper/Views/BackupLogsPanel.axaml
+++ b/ArchiveMaster.Module.FileBackupper/Views/BackupLogsPanel.axaml
@@ -3,7 +3,6 @@
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:c="using:ArchiveMaster.Converters"
-    xmlns:cf="using:FzLib.Avalonia.Converters"
     xmlns:cvt="using:ArchiveMaster.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:l="using:Microsoft.Extensions.Logging"
@@ -12,17 +11,12 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
-    <UserControl.Resources>
-        <cf:ValueMappingConverter
-            x:Key="LogMapConverter"
-            Map="{me:StringToDictionary Trace:细节;Debug:调试;Information:信息;Warning:警告;Error:错误;Critical:关键;None:全部}" />
-    </UserControl.Resources>
     <Grid RowDefinitions="Auto,8,*">
         <Grid ColumnDefinitions="Auto,8,Auto,32,Auto,8,Auto,8,Auto,8,Auto,32,*,8,Auto,0,Auto">
             <TextBlock Text="类型：" />
             <ComboBox
                 Grid.Column="2"
-                DisplayMemberBinding="{Binding ., Converter={StaticResource LogMapConverter}}"
+                DisplayMemberBinding="{Binding ., Converter={x:Static cvt:Converters.LogMap}}"
                 ItemsSource="{me:EnumValues l:LogLevel}"
                 SelectedItem="{Binding LogType}" />
 
@@ -63,12 +57,9 @@
             Grid.Row="2"
             IsReadOnly="True"
             ItemsSource="{Binding Logs}">
-            <DataGrid.Resources>
-                <c:LogLevelConverter x:Key="LogLevelConverter" />
-            </DataGrid.Resources>
             <DataGrid.Columns>
                 <DataGridTextColumn
-                    Binding="{Binding Type, Converter={StaticResource LogLevelConverter}, Mode=OneWay}"
+                    Binding="{Binding Type, Converter={x:Static cvt:Converters.LogMap}, Mode=OneWay}"
                     Header="类型" />
                 <DataGridTextColumn
                     Binding="{Binding Time, Converter={x:Static cvt:Converters.DateTime}, Mode=OneWay}"
