--- a/ArchiveMaster.Module.FileBackupper/Views/BackupManageCenterPanel.axaml
+++ b/ArchiveMaster.Module.FileBackupper/Views/BackupManageCenterPanel.axaml
@@ -28,7 +28,7 @@
         <Grid RowDefinitions="*,8,*">
             <Grid
                 Grid.RowSpan="3"
-                IsVisible="{Binding SelectedTask, Converter={x:Static cvt:Converters.IsNotNull}, ConverterParameter=i}"
+                IsVisible="{Binding SelectedTask, Converter={x:Static cvt:Converters.IsNull}}"
                 RowDefinitions="*,8,Auto">
                 <v:BackupTaskDataGrid
                     ItemsSource="{Binding Tasks}"
