将Panel相关的逻辑和样式进行了分离

--- a/ArchiveMaster.Core/GlobalResources.axaml
+++ b/ArchiveMaster.Core/GlobalResources.axaml
@@ -3,7 +3,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:c="using:ArchiveMaster.Converters">
     <ResourceDictionary.MergedDictionaries>
-        <ResourceInclude Source="Views/FileDataGridStyle.axaml" />
         <ResourceInclude Source="FontIcons.axaml" />
+        <ResourceInclude Source="Views/FileDataGridStyle.axaml" />
+        <ResourceInclude Source="Views/PanelStyles.axaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
